# cnr_ros_control

./: .coverage.sh  .gitignore  .travis.yml  .upstream.repos  LICENSE.h  README.md  a.cpp  ci.rosinstall  codecov.yml  dependencies.rosinstall  index.md  ros_control.md  test_dependencies.rosinstall
cnr_configuration_manager/: CMakeLists.txt  README.md  package.xml  plugin.xml
cnr_configuration_manager/cmake/: cnrConfigMacros.cmake
cnr_configuration_manager/include/cnr_configuration_manager/: cnr_configuration_loader.h  cnr_configuration_manager.h  cnr_configuration_types.h  cnr_hardware_nodelet_interface.h  signal_handler.h
cnr_configuration_manager/include/cnr_configuration_manager/internal/: cnr_configuration_manager_utils.h  cnr_configuration_manager_xmlrpc.h
cnr_configuration_manager/include/cnr_configuration_manager/utils/: tasks_pool.h
cnr_configuration_manager/launch/: configuration_nodelet_manager.launch
cnr_configuration_manager/src/: configuration_manager_node.cpp  dispatcher.cpp  joy_teach_pendant.cpp  ui_configuration_manager.cpp
cnr_configuration_manager/src/cnr_configuration_manager/: cnr_configuration_loader.cpp  cnr_configuration_manager.cpp  cnr_hardware_nodelet_interface.cpp  signal_handler.cpp
cnr_configuration_manager/test/: test.cpp  test.launch
cnr_controller_interfaces/: README.md
cnr_controller_interfaces/cnr_controller_interface/: CMakeLists.txt  README.md  package.xml
cnr_controller_interfaces/cnr_controller_interface/cmake/: cnrConfigMacros.cmake
cnr_controller_interfaces/cnr_controller_interface/include/cnr_controller_interface/: cnr_controller_interface.h  cnr_controller_interface_impl.h  cnr_joint_command_controller_interface.h  cnr_joint_command_controller_interface.h.save  cnr_joint_command_controller_interface_impl.h  cnr_joint_controller_interface.h  cnr_joint_controller_interface_impl.h  cnr_multi_chain_controller_interface.h
cnr_controller_interfaces/cnr_controller_interface/src/cnr_controller_interface/: cnr_controller_interface.cpp
cnr_controller_interfaces/cnr_controller_interface/test/: test.cpp  test.launch
cnr_controller_interfaces/cnr_controller_interface_params/: CMakeLists.txt  package.xml
cnr_controller_interfaces/cnr_controller_interface_params/include/cnr_controller_interface_params/: cnr_controller_interface_params.h
cnr_controller_interfaces/cnr_controller_interface_params/src/cnr_controller_interface_params/: cnr_controller_interface_params.cpp
cnr_controller_interfaces/cnr_controller_interface_params/test/: test.launch
cnr_controller_interfaces/cnr_controller_interface_utils/: CMakeLists.txt  package.xml
cnr_controller_interfaces/cnr_controller_interface_utils/include/cnr_controller_interface_utils/: cnr_controller_interface_utils.h
cnr_controller_interfaces/cnr_controller_interface_utils/src/cnr_controller_interface_utils/: cnr_controller_interface_utils.cpp
cnr_controller_interfaces/cnr_controller_interface_utils/test/: test.cpp  test.launch
cnr_controller_interfaces/cnr_controller_interfaces/: CMakeLists.txt  package.xml
cnr_controller_interfaces/cnr_controller_manager_interface/: CMakeLists.txt  Release.key  package.xml
cnr_controller_interfaces/cnr_controller_manager_interface/include/cnr_controller_manager_interface/: cnr_controller_manager.h  cnr_controller_manager_interface.h  cnr_controller_manager_interface_srv.h  cnr_controller_manager_proxy.h
cnr_controller_interfaces/cnr_controller_manager_interface/src/cnr_controller_manager_interface/: cnr_controller_manager.cpp  cnr_controller_manager_interface.cpp  cnr_controller_manager_interface_srv.cpp  cnr_controller_manager_proxy.cpp
cnr_controller_interfaces/cnr_controller_manager_interface/test/: test.launch
cnr_hardware_driver_interface/: CMakeLists.txt  CMakeLists.txt.bak  README.md  package.xml  plugin.xml
cnr_hardware_driver_interface/include/cnr_hardware_driver_interface/: cnr_hardware_driver_interface.h
cnr_hardware_driver_interface/src/cnr_hardware_driver_interface/: cnr_hardware_driver_interface.cpp
cnr_hardware_driver_interface/test/: test.launch
cnr_hardware_interfaces/cnr_fake_hardware_interface/: CMakeLists.txt  package.xml  plugin.xml  readme.md
cnr_hardware_interfaces/cnr_fake_hardware_interface/include/cnr_fake_hardware_interface/: cnr_fake_robot_hw.h  cnr_fake_robot_hw_nodelet.h
cnr_hardware_interfaces/cnr_fake_hardware_interface/test/: test.cpp  test.launch
cnr_hardware_interfaces/cnr_hardware_interface/: .gitignore  CMakeLists.txt  LICENSE  README.md  dependencies.rosinstall  package.xml  plugin.xml
cnr_hardware_interfaces/cnr_hardware_interface/test/: test.cpp  test.launch
cnr_hardware_interfaces/cnr_hardware_interfaces/: CMakeLists.txt  package.xml
cnr_hardware_interfaces/cnr_hardware_nodelet_interface/: CMakeLists.txt  README.md  package.xml  plugin.xml
cnr_hardware_interfaces/cnr_hardware_nodelet_interface/test/: test.launch
cnr_hardware_interfaces/cnr_topic_hardware_interface/: CMakeLists.txt  README.md  package.xml  plugin.xml
cnr_hardware_interfaces/cnr_topic_hardware_interface/test/: test.cpp  test.launch
cnr_hardware_interfaces/cnr_topics_hardware_interface/: CMakeLists.txt  README.md  package.xml  plugin.xml
cnr_hardware_interfaces/cnr_topics_hardware_interface/test/: test.launch
cnr_ros_control_test_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
cnr_ros_control_test_description/launch/: ur10_upload.launch  ur3_upload.launch  ur5_upload.launch  view_ur10.launch  view_ur3.launch  view_ur5.launch
cnr_ros_control_test_description/urdf/: ur10.urdf.xacro  ur10_joint_limited_robot.urdf.xacro  ur10_robot.urdf.xacro  ur3.urdf.xacro  ur3_joint_limited_robot.urdf.xacro  ur3_robot.urdf.xacro  ur5.urdf.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robot.urdf.xacro
configuration_msgs/: CMakeLists.txt  package.xml
configuration_msgs/msg/: ConfigurationComponent.msg
configuration_msgs/srv/: GetConfig.srv  ListConfigurations.srv  SendMessage.srv  SetConfig.srv  StartConfiguration.srv  StopConfiguration.srv  UpdateConfigurations.srv
(+67 files in other folders)
