<?xml version="1.0"?>
<package format="2">
  <name>cnr_controller_interface</name>
  <version>0.0.0</version>
  <description>The cnr_controller_interface package</description>


  <maintainer email="ros@todo.todo">ros</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <exec_depend>controller_interface</exec_depend>

  <build_depend>cnr_logger</build_depend>
  <build_export_depend>cnr_logger</build_export_depend>
  <exec_depend>cnr_logger</exec_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <build_export_depend>diagnostic_msgs</build_export_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <build_depend>rosconsole</build_depend>
  <build_export_depend>rosconsole</build_export_depend>
  <exec_depend>rosconsole</exec_depend>
  
  <build_depend>realtime_utilities</build_depend>
  <build_export_depend>realtime_utilities</build_export_depend>
  <exec_depend>realtime_utilities</exec_depend>

  <build_depend>code_coverage</build_depend>
  <build_depend>rostest</build_depend>
  <test_depend>rostest</test_depend>

  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>

  <build_depend>rosdyn_core</build_depend>
  <build_export_depend>rosdyn_core</build_export_depend>
  <exec_depend>rosdyn_core</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
