<?xml version="1.0"?>
<package format="2">
  <name>cnr_controller_interfaces</name>
  <version>0.0.0</version>
  <description>The cnr_controller_interfaces package</description>

  <maintainer email="wsl@todo.todo">wsl</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/cnr_controller_interfaces</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cnr_controller_interface</exec_depend>
  <exec_depend>cnr_controller_manager_interface</exec_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
