<?xml version="1.0"?>
<package format="2">
  <name>cnr_controller_manager_interface</name>
  <version>0.1.0</version>
  <description>The cnr_controller_manager_interface package</description>
  <maintainer email="nicola.pedrocchi@stiima.cnr.it">wsl</maintainer>
  <license>BSD</license>


  <url type="website">http://stiima.cnr.it</url>
  <author email="nicola.pedrocchi@stiima.cnr.it">Nicola Pedrocchi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>cnr_logger</build_depend>
  <build_depend>cnr_controller_interface_params</build_depend>
  <build_depend>realtime_utilities</build_depend>


  <build_export_depend>controller_manager_msgs</build_export_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>cnr_logger</build_export_depend>
  <build_export_depend>cnr_controller_interface_params</build_export_depend>
  <build_export_depend>realtime_utilities</build_export_depend>

  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>cnr_logger</exec_depend>
  <exec_depend>cnr_controller_interface_params</exec_depend>
  <exec_depend>realtime_utilities</exec_depend>

  <build_depend>code_coverage</build_depend>
  <build_depend>rostest</build_depend>
  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
